# TrueGearCLI

./: Cargo.toml  README.md  README_zh.md
doc/: ble_protocol.md  command.schema.json  effect.schema.json  websocket_protocol.md
src/: ble.rs  ble_message_ext.rs  ble_notify_parser.rs  command.rs  controller.rs  main.rs  predefined.rs  websocket.rs
