[package]
name = "truegearcli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0"
btleplug = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
futures-util = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = "1"
